--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "emoji-line-break",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Split emoji text into multiple lines.",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "lint": "eslint --fix *.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "@babel/preset-env": "^7.8.7",
     "babel-loader": "^8.0.6",
     "create-banner": "^1.0.0",
+    "eslint": "^6.8.0",
     "mocha": "^7.1.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
